@@ -3,6 +3,9 @@
     menu to dynamically enable or disable EMS memory
     at run-time. You can now also modify EMS memory
     with CONFIG command from command-line. (Wengier)
+  - Added config option "drive z hide files" (in [dos]
+    section) to hide/remove files listed (separated by
+    space) from the Z drive. (Wengier)
   - You can now add your own programs or files to the
     Z drive! Put your programs or files in the drivez
     directory located in the DOSBox-X program folder,
